gcp_prod/gcp_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: coin-svc # Name of Service
  annotations:
    cloud.google.com/neg: '{"ingress": true}' # Creates a NEG after an Ingress is created
    cloud.google.com/backend-config: '{"default": "coin-hc-config"}'
spec: # Service's specification
  type: ClusterIP
  selector:
    run: coin-app # Selects Pods labelled run: neg-demo-app
  ports:
  - name: http
    port: 80 # Service's port
    protocol: TCP
    targetPort: 8000
