gcp_prod/gcp_ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coin-ing
  annotations: 
    kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
spec:
  defaultBackend:
    service:
      name: coin-svc # Name of the Service targeted by the Ingress
      port:
        number: 80 # Should match the port used by the Service
